--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -7,7 +7,7 @@
     <string name="search_hint">Buscar…</string>
     <string name="language">es-ES</string>
     <string name="movie_image_desc">Imagen de la película</string>
-    <string name="rating">Calificación: </string>
+    <string name="vote_average">Calificación: </string>
     <string name="genres">Generos: </string>
     <string name="overview">Resumen: </string>
 
